syntax = "proto3";

package resf.apollo.v1;

import "google/protobuf/wrappers.proto";

option go_package = "peridot.resf.org/apollo/pb;apollopb";

message CVE {
  string name = 1;

  google.protobuf.StringValue source_by = 2;
  google.protobuf.StringValue source_link = 3;

  google.protobuf.StringValue cvss3_scoring_vector = 4;
  google.protobuf.StringValue cvss3_base_score = 5;
  google.protobuf.StringValue cwe = 6;
}

message ListUnresolvedCVEsRequest {}
message ListUnresolvedCVEsResponse {
  repeated CVE cves = 1;
}

message ListFixedCVEsRequest {}
message ListFixedCVEsResponse {
  repeated CVE cves = 1;
}
